load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "continuity_lib",
    srcs = [
        "continuity.cc",
        "tracee.cc",
    ],
    hdrs = [
        "tracee.h",
    ],
    deps = [
        "//src/util",
        "@abseil-cpp//absl/base:log_severity",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
    ],
)

cc_binary(
    name = "continuity",
    deps = [
        ":continuity_lib",
    ],
)
